--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>E | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Hello, I’m E</h1>
-  <p>This is my portfolio website.</p>
+  <div class="card">
+    <h1>Hello, I’m E</h1>
+    <p>Web Developer. I build clean, responsive websites.</p>
+
+    <div class="buttons">
+      <a class="btn" href="https://github.com/milito-coder" target="_blank">GitHub</a>
+      <a class="btn outline" href="#" target="_blank">LinkedIn</a>
+    </div>
+
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Portfolio Website</strong> — This website.</li>
+      <li><strong>Coming soon</strong> — Weather App.</li>
+      <li><strong>Coming soon</strong> — To-Do App.</li>
+    </ul>
+  </div>
 </body>
 </html>
+
