--- a/index.html
+++ b/index.html
@@ -2,133 +2,219 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mohamad Sheikh Bakri | Portfolio</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
+  <!-- NAV -->
   <header class="nav">
-    <div class="container nav-inner">
-      <div class="logo">MSB</div>
-      <nav class="links">
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+    <div class="nav-wrap">
+      <a class="pill-btn" href="resume.pdf" download>Download Resume</a>
+
+      <nav class="nav-pill">
+        <a href="#home" class="nav-link">Home</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#projects" class="nav-link">Projects</a>
+        <a href="#contact" class="nav-link">Contact</a>
       </nav>
     </div>
   </header>
 
-  <main class="container">
+  <!-- HERO -->
+  <section id="home" class="hero">
+    <div class="hero-wrap">
+      <div class="hero-left">
+        <h1 class="hero-title">
+          <span class="hero-muted">MR.</span>
+          <span class="hero-name">MOHAMAD SHEIKH BAKRI</span>
+        </h1>
 
-    <!-- HERO -->
-    <section class="hero">
-      <div>
-        <span class="tag">Full-Stack Web Developer</span>
-        <h1>Mohamad Sheikh Bakri</h1>
-        <p class="subtitle">
+        <p class="hero-sub">
+          <strong>Full-Stack Web Developer</strong><br />
           I’m a full-stack web developer focused on building reliable, user-friendly websites and web apps.
         </p>
 
-        <div class="btn-row">
-          <a class="btn" href="https://github.com/milito-coder" target="_blank">GitHub</a>
-          <a class="btn btn-ghost" href="https://www.linkedin.com/in/mohamad-sheikh-bakri-93b1a41aa/" target="_blank">LinkedIn</a>
+        <div class="hero-actions">
+          <a class="cta" href="#contact">Hire Me</a>
+        </div>
+
+        <div class="social-row">
+          <!-- LinkedIn -->
+          <a class="icon-btn" href="https://www.linkedin.com/in/mohamad-sheikh-bakri-93b1a41aa/" target="_blank" rel="noreferrer" aria-label="LinkedIn">
+            <svg viewBox="0 0 24 24" class="ic" fill="currentColor">
+              <path d="M20.447 20.452H17.21v-5.569c0-1.328-.027-3.036-1.852-3.036-1.853 0-2.136 1.445-2.136 2.939v5.666H9.0V9h3.112v1.561h.044c.434-.823 1.494-1.69 3.073-1.69 3.287 0 3.894 2.164 3.894 4.977v6.604zM5.337 7.433A1.815 1.815 0 1 1 5.34 3.8a1.815 1.815 0 0 1-.003 3.633zM6.956 20.452H3.717V9h3.239v11.452z"/>
+            </svg>
+          </a>
+
+          <!-- GitHub (اختياري بس مطابق للتصميم كأيقونة) -->
+          <a class="icon-btn" href="https://github.com/milito-coder" target="_blank" rel="noreferrer" aria-label="GitHub">
+            <svg viewBox="0 0 24 24" class="ic" fill="currentColor">
+              <path d="M12 .5C5.73.5.75 5.48.75 11.75c0 4.98 3.22 9.2 7.69 10.69.56.1.77-.24.77-.54v-2.02c-3.13.68-3.79-1.34-3.79-1.34-.51-1.3-1.25-1.65-1.25-1.65-1.02-.7.08-.69.08-.69 1.13.08 1.73 1.16 1.73 1.16 1 .1 1.52.76 1.85 1.2.1-.73.39-1.2.71-1.48-2.5-.28-5.13-1.25-5.13-5.57 0-1.23.44-2.23 1.16-3.01-.12-.29-.5-1.43.11-2.98 0 0 .95-.3 3.11 1.15.9-.25 1.87-.38 2.83-.38.96 0 1.93.13 2.83.38 2.16-1.45 3.11-1.15 3.11-1.15.61 1.55.23 2.69.11 2.98.72.78 1.16 1.78 1.16 3.01 0 4.33-2.64 5.29-5.15 5.57.4.35.76 1.03.76 2.08v3.08c0 .3.21.65.78.54 4.46-1.49 7.67-5.71 7.67-10.69C23.25 5.48 18.27.5 12 .5z"/>
+            </svg>
+          </a>
+
+          <!-- WhatsApp -->
+          <a class="icon-btn" href="https://wa.me/905347602682" target="_blank" rel="noreferrer" aria-label="WhatsApp">
+            <svg viewBox="0 0 24 24" class="ic" fill="currentColor">
+              <path d="M20.52 3.49A11.81 11.81 0 0 0 12.06 0C5.5.01.16 5.35.16 11.92c0 2.1.55 4.15 1.59 5.96L0 24l6.27-1.64a11.9 11.9 0 0 0 5.79 1.48h.01c6.57 0 11.91-5.34 11.92-11.91 0-3.18-1.24-6.17-3.47-8.44Zm-8.46 18.35h-.01a9.9 9.9 0 0 1-5.05-1.38l-.36-.21-3.72.97.99-3.63-.24-.37a9.9 9.9 0 1 1 8.39 4.62Zm5.76-7.86c-.31-.16-1.82-.9-2.1-1.01-.28-.1-.49-.16-.7.16-.21.31-.81 1.01-.99 1.22-.18.21-.36.23-.67.08-.31-.16-1.31-.48-2.49-1.54-.92-.82-1.54-1.83-1.72-2.14-.18-.31-.02-.48.13-.63.14-.14.31-.36.47-.54.16-.18.21-.31.31-.52.1-.21.05-.39-.03-.54-.08-.16-.7-1.68-.96-2.3-.25-.6-.5-.52-.7-.53h-.6c-.21 0-.54.08-.82.39-.28.31-1.07 1.04-1.07 2.54s1.1 2.95 1.25 3.15c.16.21 2.17 3.31 5.26 4.64.74.32 1.31.51 1.76.65.74.24 1.41.2 1.94.12.59-.09 1.82-.74 2.08-1.46.26-.72.26-1.33.18-1.46-.08-.13-.28-.21-.59-.37Z"/>
+            </svg>
+          </a>
         </div>
       </div>
 
-      <div class="card">
-        <h3>Quick Info</h3>
-        <ul>
-          <li>Location: Türkiye</li>
-          <li>Focus: Web & WordPress</li>
-          <li>Status: Open to work</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section id="about" class="section">
-      <h2>About</h2>
-      <p class="text">
-        I enjoy building modern web interfaces and connecting them with solid backend systems.
-        I care about clean code, performance, and real-world solutions.
-      </p>
-    </section>
-
-    <!-- SKILLS -->
-    <section id="skills" class="section">
-      <h2>Skills</h2>
-      <div class="chips">
-        <span class="chip">HTML</span>
-        <span class="chip">CSS</span>
-        <span class="chip">JavaScript</span>
-        <span class="chip">WordPress</span>
-        <span class="chip">Git / GitHub</span>
-        <span class="chip">APIs</span>
-        <span class="chip">Backend</span>
-        <span class="chip">Databases</span>
-      </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects" class="section">
-      <h2>Projects</h2>
-
-      <div class="grid">
-        <div class="p-card">
-          <h3>Portfolio Website</h3>
-          <p class="muted">Personal portfolio website.</p>
-          <div class="p-actions">
-            <a class="btn small" href="#">Live</a>
-            <a class="btn small btn-ghost" href="#">Code</a>
-          </div>
-        </div>
-
-        <div class="p-card">
-          <h3>Weather App</h3>
-          <p class="muted">Coming soon.</p>
-          <div class="p-actions">
-            <a class="btn small" href="#">Live</a>
-            <a class="btn small btn-ghost" href="#">Code</a>
-          </div>
-        </div>
-
-        <div class="p-card">
-          <h3>To-Do App</h3>
-          <p class="muted">Coming soon.</p>
-          <div class="p-actions">
-            <a class="btn small" href="#">Live</a>
-            <a class="btn small btn-ghost" href="#">Code</a>
+      <div class="hero-right">
+        <!-- ضع صورتك باسم: assets/profile.jpg -->
+        <div class="profile-ring">
+          <div class="profile">
+            <img src="assets/profile.jpg" alt="Profile" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+            <div class="fallback">MSB</div>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section">
-      <h2>Contact</h2>
-      <p class="text">Let’s get in touch:</p>
-
-      <div class="contact-icons">
-        <a href="mailto:mhmdmilito43@gmail.com" class="icon">✉️ Email</a>
-        <a href="tel:+905347602682" class="icon">📞 Phone</a>
-        <a href="https://wa.me/905347602682" target="_blank" class="icon">💬 WhatsApp</a>
-        <a href="https://www.linkedin.com/in/mohamad-sheikh-bakri-93b1a41aa/" target="_blank" class="icon">💼 LinkedIn</a>
+  <!-- ABOUT -->
+  <section id="about" class="section">
+    <div class="container">
+      <div class="big-card">
+        <h2>About Me</h2>
+        <p class="p">
+          I’m Mohamad Sheikh Bakri, a Full-Stack Web Developer focused on building reliable, user-friendly websites and web apps.
+          I enjoy clean UI, strong backend logic, and practical solutions that solve real problems.
+        </p>
       </div>
-    </section>
 
-  </main>
+      <div class="two-cards">
+        <div class="card">
+          <h3>Education</h3>
+          <ul class="list">
+            <li>— Add your degree / university</li>
+            <li>— Add another education item</li>
+          </ul>
+        </div>
 
-  <footer class="footer">
-    <p>© <span id="year"></span> Mohamad Sheikh Bakri</p>
-  </footer>
+        <div class="card">
+          <h3>Certifications & Courses</h3>
+          <ul class="list">
+            <li>— Add a course (ex: Full-Stack)</li>
+            <li>— Add a course (ex: WordPress)</li>
+            <li>— Add a course (ex: APIs)</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="big-card">
+        <h3>Skills & Technologies</h3>
+        <div class="skills">
+          <!-- لو بدك صور أيقونات، حطها داخل assets/skills/ -->
+          <div class="skill">HTML</div>
+          <div class="skill">CSS</div>
+          <div class="skill">JavaScript</div>
+          <div class="skill">WordPress</div>
+          <div class="skill">Git/GitHub</div>
+          <div class="skill">APIs</div>
+          <div class="skill">Backend</div>
+          <div class="skill">Databases</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- PROJECTS -->
+  <section id="projects" class="section">
+    <div class="container">
+      <h2 class="section-title">My Projects</h2>
+
+      <div class="big-card">
+        <h3>Development Projects</h3>
+
+        <div class="projects-grid">
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/dev-1.jpg" alt="Project 1" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Project One</div>
+          </a>
+
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/dev-2.jpg" alt="Project 2" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Project Two</div>
+          </a>
+
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/dev-3.jpg" alt="Project 3" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Project Three</div>
+          </a>
+        </div>
+      </div>
+
+      <div class="big-card">
+        <h3>Design Projects</h3>
+
+        <div class="projects-grid">
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/design-1.jpg" alt="Design 1" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Design One</div>
+          </a>
+
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/design-2.jpg" alt="Design 2" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Design Two</div>
+          </a>
+
+          <a class="project" href="#" target="_blank" rel="noreferrer">
+            <div class="thumb">
+              <img src="assets/projects/design-3.jpg" alt="Design 3" onerror="this.style.display='none'; this.parentElement.classList.add('no-img');" />
+              <div class="thumb-fallback">IMG</div>
+            </div>
+            <div class="project-name">Design Three</div>
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="section contact">
+    <div class="container">
+      <h2 class="section-title">Contact Me</h2>
+
+      <div class="contact-row">
+        <a class="email-pill" href="mailto:mhmdmilito43@gmail.com">
+          <span class="mail-ic">✉</span>
+          <span>mhmdmilito43@gmail.com</span>
+        </a>
+
+        <a class="icon-square" href="https://www.linkedin.com/in/mohamad-sheikh-bakri-93b1a41aa/" target="_blank" rel="noreferrer" aria-label="LinkedIn">in</a>
+        <a class="icon-square" href="https://wa.me/905347602682" target="_blank" rel="noreferrer" aria-label="WhatsApp">wa</a>
+        <a class="icon-square" href="tel:+905347602682" aria-label="Phone">tel</a>
+      </div>
+
+      <div class="footer-row">
+        <p>© <span id="year"></span> All Right Reserved</p>
+        <p>Developed By: Mohamad Sheikh Bakri</p>
+      </div>
+    </div>
+  </section>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-
 </body>
 </html>
-
-
